--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,7 +4,9 @@
   "description": "shopping list webapp with authentication and mongodb integration",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "node --watch index.js"
   },
   "repository": {
     "type": "git",
