--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -3,7 +3,8 @@ name: Build and Publish Docker image
 on:
   push:
     branches:
-      - main
+      - main  # or your default branch
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -17,11 +18,10 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GHCR_PAT }}
-
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/shopping-list :latest
+          tags: ghcr.io/sashavrg/shopping-list:latest
