--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches:
       - main  # or your default branch
+      
+permissions:
+  contents: read
+  packages: write
 
 jobs:
   build:
